@@ -43,7 +43,6 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
@@ -116,7 +115,7 @@ public class Formatter {
     /**
      * The arguments passed to --add-scram
      */
-    private List<String> scramArguments = Collections.emptyList();
+    private List<String> scramArguments = List.of();
 
     /**
      * The name of the initial controller listener.
@@ -348,15 +347,22 @@ public class Formatter {
         if (configuredKRaftVersionLevel.isPresent()) {
             if (configuredKRaftVersionLevel.get() == 0) {
                 if (hasDynamicQuorum()) {
-                    throw new FormatterException("Cannot set kraft.version to " +
-                        configuredKRaftVersionLevel.get() + " if KIP-853 configuration is present. " +
-                            "Try removing the --feature flag for kraft.version.");
+                    throw new FormatterException(
+                        "Cannot set kraft.version to " +
+                        configuredKRaftVersionLevel.get() +
+                        " if one of the flags --standalone, --initial-controllers, or --no-initial-controllers is used. " +
+                        "For dynamic controllers support, try removing the --feature flag for kraft.version."
+                    );
                 }
             } else {
                 if (!hasDynamicQuorum()) {
-                    throw new FormatterException("Cannot set kraft.version to " +
-                        configuredKRaftVersionLevel.get() + " unless KIP-853 configuration is present. " +
-                            "Try removing the --feature flag for kraft.version.");
+                    throw new FormatterException(
+                        "Cannot set kraft.version to " +
+                        configuredKRaftVersionLevel.get() +
+                        " unless one of the flags --standalone, --initial-controllers, or --no-initial-controllers is used. " +
+                        "For dynamic controllers support, try using one of --standalone, --initial-controllers, or " +
+                        "--no-initial-controllers."
+                    );
                 }
             }
             return configuredKRaftVersionLevel.get();
@@ -409,6 +415,7 @@ public class Formatter {
         if (ensemble.emptyLogDirs().isEmpty()) {
             printStream.println("All of the log directories are already formatted.");
         } else {
+            printStream.println("Bootstrap metadata: " + bootstrapMetadata);
             Map<String, DirectoryType> directoryTypes = new HashMap<>();
             for (String emptyLogDir : ensemble.emptyLogDirs()) {
                 DirectoryType directoryType = DirectoryType.calculate(emptyLogDir,
@@ -455,17 +462,12 @@ public class Formatter {
         DYNAMIC_METADATA_VOTER_DIRECTORY;
 
         String description() {
-            switch (this) {
-                case LOG_DIRECTORY:
-                    return "data directory";
-                case STATIC_METADATA_DIRECTORY:
-                    return "metadata directory";
-                case DYNAMIC_METADATA_NON_VOTER_DIRECTORY:
-                    return "dynamic metadata directory";
-                case DYNAMIC_METADATA_VOTER_DIRECTORY:
-                    return "dynamic metadata voter directory";
-            }
-            throw new RuntimeException("invalid enum type " + this);
+            return switch (this) {
+                case LOG_DIRECTORY -> "data directory";
+                case STATIC_METADATA_DIRECTORY -> "metadata directory";
+                case DYNAMIC_METADATA_NON_VOTER_DIRECTORY -> "dynamic metadata directory";
+                case DYNAMIC_METADATA_VOTER_DIRECTORY -> "dynamic metadata voter directory";
+            };
         }
 
         boolean isDynamicMetadataDirectory() {
