@@ -18,6 +18,7 @@
 package org.apache.kafka.image.loader;
 
 import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.message.KRaftVersionRecord;
 import org.apache.kafka.common.message.SnapshotHeaderRecord;
 import org.apache.kafka.common.metadata.AbortTransactionRecord;
 import org.apache.kafka.common.metadata.BeginTransactionRecord;
@@ -26,7 +27,6 @@ import org.apache.kafka.common.metadata.FeatureLevelRecord;
 import org.apache.kafka.common.metadata.PartitionRecord;
 import org.apache.kafka.common.metadata.RemoveTopicRecord;
 import org.apache.kafka.common.metadata.TopicRecord;
-import org.apache.kafka.common.record.ControlRecordType;
 import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.image.MetadataDelta;
 import org.apache.kafka.image.MetadataImage;
@@ -36,9 +36,10 @@ import org.apache.kafka.raft.Batch;
 import org.apache.kafka.raft.BatchReader;
 import org.apache.kafka.raft.ControlRecord;
 import org.apache.kafka.raft.LeaderAndEpoch;
-import org.apache.kafka.raft.OffsetAndEpoch;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
+import org.apache.kafka.server.common.KRaftVersion;
 import org.apache.kafka.server.common.MetadataVersion;
+import org.apache.kafka.server.common.OffsetAndEpoch;
 import org.apache.kafka.server.fault.MockFaultHandler;
 import org.apache.kafka.snapshot.SnapshotReader;
 import org.apache.kafka.test.TestUtils;
@@ -50,7 +51,6 @@ import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
@@ -60,10 +60,8 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
+import static org.apache.kafka.server.common.MetadataVersion.FEATURE_NAME;
 import static org.apache.kafka.server.common.MetadataVersion.IBP_3_5_IV0;
 import static org.apache.kafka.server.common.MetadataVersion.MINIMUM_VERSION;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -145,7 +143,7 @@ public class MetadataLoaderTest {
     @Test
     public void testInstallPublishers() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testInstallPublishers");
-        List<MockPublisher> publishers = asList(new MockPublisher("a"),
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"),
                 new MockPublisher("b"),
                 new MockPublisher("c"));
         try (MetadataLoader loader = new MetadataLoader.Builder().
@@ -176,7 +174,7 @@ public class MetadataLoaderTest {
             List<Batch<ApiMessageAndVersion>> batches = lists
                 .stream()
                 .map(records -> Batch.data(0, 0, 0, 0, records))
-                .collect(Collectors.toList());
+                .toList();
 
             return new MockSnapshotReader(provenance, batches);
         }
@@ -247,7 +245,7 @@ public class MetadataLoaderTest {
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0L)).
                 build()) {
-            loader.installPublishers(singletonList(publisher)).get();
+            loader.installPublishers(List.of(publisher)).get();
             if (loadSnapshot) {
                 MockSnapshotReader snapshotReader = new MockSnapshotReader(
                     new MetadataProvenance(200, 100, 4000, true),
@@ -257,10 +255,10 @@ public class MetadataLoaderTest {
                             100,
                             4000,
                             10,
-                            singletonList(new ControlRecord(ControlRecordType.SNAPSHOT_HEADER, new SnapshotHeaderRecord()))
+                            List.of(ControlRecord.of(new SnapshotHeaderRecord()))
                         ),
                         Batch.data(0, 0, 0, 0,
-                            singletonList(new ApiMessageAndVersion(new FeatureLevelRecord().
+                            List.of(new ApiMessageAndVersion(new FeatureLevelRecord().
                                 setName(MetadataVersion.FEATURE_NAME).
                                 setFeatureLevel(MINIMUM_VERSION.featureLevel()), (short) 0))
                         )
@@ -280,13 +278,13 @@ public class MetadataLoaderTest {
                 assertEquals("testPublisherCannotBeInstalledMoreThanOnce: Attempted to install " +
                     "publisher MockPublisher, which is already installed.",
                         assertThrows(ExecutionException.class,
-                                () -> loader.installPublishers(singletonList(publisher)).get()).
+                                () -> loader.installPublishers(List.of(publisher)).get()).
                                 getCause().getMessage());
             } else {
                 assertEquals("testPublisherCannotBeInstalledMoreThanOnce: Attempted to install " +
                     "a new publisher named MockPublisher, but there is already a publisher with that name.",
                         assertThrows(ExecutionException.class,
-                                () -> loader.installPublishers(singletonList(new MockPublisher())).get()).
+                                () -> loader.installPublishers(List.of(new MockPublisher())).get()).
                                 getCause().getMessage());
             }
         }
@@ -298,7 +296,7 @@ public class MetadataLoaderTest {
     @Test
     public void testRemovePublisher() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testRemovePublisher");
-        List<MockPublisher> publishers = asList(new MockPublisher("a"),
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"),
                 new MockPublisher("b"),
                 new MockPublisher("c"));
         try (MetadataLoader loader = new MetadataLoader.Builder().
@@ -309,7 +307,7 @@ public class MetadataLoaderTest {
             loader.removeAndClosePublisher(publishers.get(1)).get();
             MockSnapshotReader snapshotReader = MockSnapshotReader.fromRecordLists(
                 new MetadataProvenance(100, 50, 2000, true),
-                singletonList(singletonList(new ApiMessageAndVersion(
+                List.of(List.of(new ApiMessageAndVersion(
                     new FeatureLevelRecord().
                         setName(MetadataVersion.FEATURE_NAME).
                         setFeatureLevel(MINIMUM_VERSION.featureLevel()), (short) 0))));
@@ -337,7 +335,7 @@ public class MetadataLoaderTest {
     public void testLoadEmptySnapshot() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLoadEmptySnapshot");
         MockTime time = new MockTime();
-        List<MockPublisher> publishers = singletonList(new MockPublisher());
+        List<MockPublisher> publishers = List.of(new MockPublisher());
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setTime(time).
@@ -360,6 +358,8 @@ public class MetadataLoaderTest {
                 publishers.get(0).latestSnapshotManifest);
             assertEquals(MINIMUM_VERSION,
                 loader.metrics().currentMetadataVersion());
+            assertEquals(MINIMUM_VERSION.featureLevel(),
+                loader.metrics().finalizedFeatureLevel(FEATURE_NAME));
         }
         assertTrue(publishers.get(0).closed);
         assertEquals(Optional.of(MINIMUM_VERSION), publishers.get(0).latestImage.features().metadataVersion());
@@ -384,13 +384,13 @@ public class MetadataLoaderTest {
     ) throws Exception {
         MockSnapshotReader snapshotReader = new MockSnapshotReader(
             new MetadataProvenance(offset, 100, 4000, true),
-            singletonList(
+            List.of(
                 Batch.control(
                     200,
                     100,
                     4000,
                     10,
-                    singletonList(new ControlRecord(ControlRecordType.SNAPSHOT_HEADER, new SnapshotHeaderRecord()))
+                    List.of(ControlRecord.of(new SnapshotHeaderRecord()))
                 )
             )
         );
@@ -413,7 +413,7 @@ public class MetadataLoaderTest {
             List<ApiMessageAndVersion> records
         ) {
             return new MockBatchReader(batchBaseOffset,
-                singletonList(newBatch(batchBaseOffset, epoch, records)));
+                List.of(newBatch(batchBaseOffset, epoch, records)));
         }
 
         static Batch<ApiMessageAndVersion> newBatch(
@@ -472,7 +472,7 @@ public class MetadataLoaderTest {
     public void testLoadEmptyBatch() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLoadEmptyBatch");
         MockTime time = new MockTime();
-        List<MockPublisher> publishers = singletonList(new MockPublisher());
+        List<MockPublisher> publishers = List.of(new MockPublisher());
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setTime(time).
@@ -483,13 +483,13 @@ public class MetadataLoaderTest {
             publishers.get(0).firstPublish.get(10, TimeUnit.SECONDS);
             MockBatchReader batchReader = new MockBatchReader(
                 300,
-                singletonList(
+                List.of(
                     Batch.control(
                         300,
                         100,
                         4000,
                         10,
-                        singletonList(new ControlRecord(ControlRecordType.SNAPSHOT_HEADER, new SnapshotHeaderRecord()))
+                        List.of(ControlRecord.of(new SnapshotHeaderRecord()))
                     )
                 )
             ).setTime(time);
@@ -514,12 +514,71 @@ public class MetadataLoaderTest {
     }
 
     /**
+     * Test the kraft.version finalized level value is correct.
+     * @throws Exception
+     */
+    @Test
+    public void testKRaftVersionFinalizedLevelMetric() throws Exception {
+        MockFaultHandler faultHandler = new MockFaultHandler("testKRaftVersionFinalizedLevelMetric");
+        MockTime time = new MockTime();
+        List<MockPublisher> publishers = List.of(new MockPublisher());
+        try (MetadataLoader loader = new MetadataLoader.Builder().
+            setFaultHandler(faultHandler).
+            setTime(time).
+            setHighWaterMarkAccessor(() -> OptionalLong.of(1L)).
+            build()) {
+            loader.installPublishers(publishers).get();
+            loadTestSnapshot(loader, 200);
+            assertThrows(
+                NullPointerException.class,
+                () -> loader.metrics().finalizedFeatureLevel(KRaftVersion.FEATURE_NAME)
+            );
+            publishers.get(0).firstPublish.get(10, TimeUnit.SECONDS);
+            MockBatchReader batchReader = new MockBatchReader(
+                300,
+                List.of(
+                    Batch.control(
+                        300,
+                        100,
+                        4000,
+                        10,
+                        List.of(ControlRecord.of(new KRaftVersionRecord()))
+                    )
+                )
+            ).setTime(time);
+            loader.handleCommit(batchReader);
+            loader.waitForAllEventsToBeHandled();
+            assertTrue(batchReader.closed);
+            assertEquals(300L, loader.lastAppliedOffset());
+            assertEquals((short) 0, loader.metrics().finalizedFeatureLevel(KRaftVersion.FEATURE_NAME));
+            loader.handleCommit(new MockBatchReader(301, List.of(
+                MockBatchReader.newBatch(301, 100, List.of(
+                    new ApiMessageAndVersion(new RemoveTopicRecord().
+                        setTopicId(Uuid.fromString("Uum7sfhHQP-obSvfywmNUA")), (short) 0))))));
+            loader.waitForAllEventsToBeHandled();
+            assertEquals(301L, loader.lastAppliedOffset());
+            assertEquals((short) 0, loader.metrics().finalizedFeatureLevel(KRaftVersion.FEATURE_NAME));
+            loader.handleCommit(new MockBatchReader(302, List.of(
+                Batch.control(
+                    302,
+                    100,
+                    4000,
+                    10,
+                    List.of(ControlRecord.of(new KRaftVersionRecord().setKRaftVersion((short) 1)))))));
+            loader.waitForAllEventsToBeHandled();
+            assertEquals(302L, loader.lastAppliedOffset());
+            assertEquals((short) 1, loader.metrics().finalizedFeatureLevel(KRaftVersion.FEATURE_NAME));
+        }
+        assertTrue(publishers.get(0).closed);
+    }
+
+    /**
      * Test that the lastAppliedOffset moves forward as expected.
      */
     @Test
     public void testLastAppliedOffset() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLastAppliedOffset");
-        List<MockPublisher> publishers = asList(new MockPublisher("a"),
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"),
                 new MockPublisher("b"));
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
@@ -527,11 +586,11 @@ public class MetadataLoaderTest {
                 build()) {
             loader.installPublishers(publishers).get();
             loader.handleLoadSnapshot(MockSnapshotReader.fromRecordLists(
-                new MetadataProvenance(200, 100, 4000, true), asList(
-                    singletonList(new ApiMessageAndVersion(new FeatureLevelRecord().
+                new MetadataProvenance(200, 100, 4000, true), List.of(
+                    List.of(new ApiMessageAndVersion(new FeatureLevelRecord().
                         setName(MetadataVersion.FEATURE_NAME).
                         setFeatureLevel(MINIMUM_VERSION.featureLevel()), (short) 0)),
-                    singletonList(new ApiMessageAndVersion(new TopicRecord().
+                    List.of(new ApiMessageAndVersion(new TopicRecord().
                         setName("foo").
                         setTopicId(Uuid.fromString("Uum7sfhHQP-obSvfywmNUA")), (short) 0))
                 )));
@@ -540,8 +599,8 @@ public class MetadataLoaderTest {
             }
             loader.waitForAllEventsToBeHandled();
             assertEquals(200L, loader.lastAppliedOffset());
-            loader.handleCommit(new MockBatchReader(201, singletonList(
-                MockBatchReader.newBatch(201, 100, singletonList(
+            loader.handleCommit(new MockBatchReader(201, List.of(
+                MockBatchReader.newBatch(201, 100, List.of(
                     new ApiMessageAndVersion(new RemoveTopicRecord().
                         setTopicId(Uuid.fromString("Uum7sfhHQP-obSvfywmNUA")), (short) 0))))));
             loader.waitForAllEventsToBeHandled();
@@ -562,7 +621,7 @@ public class MetadataLoaderTest {
     @Test
     public void testCatchingUpState() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLastAppliedOffset");
-        List<MockPublisher> publishers = asList(new MockPublisher("a"),
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"),
                 new MockPublisher("b"));
         AtomicReference<OptionalLong> highWaterMark = new AtomicReference<>(OptionalLong.empty());
         try (MetadataLoader loader = new MetadataLoader.Builder().
@@ -596,11 +655,11 @@ public class MetadataLoaderTest {
         long offset
     ) throws Exception {
         loader.handleLoadSnapshot(MockSnapshotReader.fromRecordLists(
-                new MetadataProvenance(offset, 100, 4000, true), asList(
-                        singletonList(new ApiMessageAndVersion(new FeatureLevelRecord().
+                new MetadataProvenance(offset, 100, 4000, true), List.of(
+                        List.of(new ApiMessageAndVersion(new FeatureLevelRecord().
                                 setName(MetadataVersion.FEATURE_NAME).
                                 setFeatureLevel(MINIMUM_VERSION.featureLevel()), (short) 0)),
-                        singletonList(new ApiMessageAndVersion(new TopicRecord().
+                        List.of(new ApiMessageAndVersion(new TopicRecord().
                                 setName("foo").
                                 setTopicId(Uuid.fromString("Uum7sfhHQP-obSvfywmNUA")), (short) 0))
                 )));
@@ -612,11 +671,11 @@ public class MetadataLoaderTest {
         long offset
     ) throws Exception {
         loader.handleLoadSnapshot(MockSnapshotReader.fromRecordLists(
-                new MetadataProvenance(offset, 100, 4000, true), asList(
-                        singletonList(new ApiMessageAndVersion(new FeatureLevelRecord().
+                new MetadataProvenance(offset, 100, 4000, true), List.of(
+                        List.of(new ApiMessageAndVersion(new FeatureLevelRecord().
                                 setName(MetadataVersion.FEATURE_NAME).
                                 setFeatureLevel(MetadataVersion.latestProduction().featureLevel()), (short) 0)),
-                        singletonList(new ApiMessageAndVersion(new TopicRecord().
+                        List.of(new ApiMessageAndVersion(new TopicRecord().
                                 setName("bar").
                                 setTopicId(Uuid.fromString("VcL2Mw-cT4aL6XV9VujzoQ")), (short) 0))
                 )));
@@ -629,7 +688,7 @@ public class MetadataLoaderTest {
     @Test
     public void testReloadSnapshot() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLastAppliedOffset");
-        List<MockPublisher> publishers = singletonList(new MockPublisher("a"));
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"));
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0)).
@@ -645,25 +704,31 @@ public class MetadataLoaderTest {
             assertEquals(200L, loader.lastAppliedOffset());
             assertEquals(MINIMUM_VERSION.featureLevel(),
                 loader.metrics().currentMetadataVersion().featureLevel());
+            assertEquals(MINIMUM_VERSION.featureLevel(),
+                loader.metrics().finalizedFeatureLevel(FEATURE_NAME));
             assertFalse(publishers.get(0).latestDelta.image().isEmpty());
 
             loadTestSnapshot2(loader, 400);
             assertEquals(400L, loader.lastAppliedOffset());
             assertEquals(MetadataVersion.latestProduction().featureLevel(),
                 loader.metrics().currentMetadataVersion().featureLevel());
+            assertEquals(MetadataVersion.latestProduction().featureLevel(),
+                loader.metrics().finalizedFeatureLevel(FEATURE_NAME));
 
             // Make sure the topic in the initial snapshot was overwritten by loading the new snapshot.
             assertFalse(publishers.get(0).latestImage.topics().topicsByName().containsKey("foo"));
             assertTrue(publishers.get(0).latestImage.topics().topicsByName().containsKey("bar"));
 
-            loader.handleCommit(new MockBatchReader(500, singletonList(
-                MockBatchReader.newBatch(500, 100, singletonList(
+            loader.handleCommit(new MockBatchReader(500, List.of(
+                MockBatchReader.newBatch(500, 100, List.of(
                     new ApiMessageAndVersion(new FeatureLevelRecord().
                         setName(MetadataVersion.FEATURE_NAME).
                         setFeatureLevel(IBP_3_5_IV0.featureLevel()), (short) 0))))));
             loader.waitForAllEventsToBeHandled();
             assertEquals(IBP_3_5_IV0.featureLevel(),
                 loader.metrics().currentMetadataVersion().featureLevel());
+            assertEquals(IBP_3_5_IV0.featureLevel(),
+                loader.metrics().finalizedFeatureLevel(FEATURE_NAME));
         }
         faultHandler.maybeRethrowFirstException();
     }
@@ -673,7 +738,7 @@ public class MetadataLoaderTest {
     public void testPublishTransaction(boolean abortTxn) throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testTransactions");
         MockPublisher publisher = new MockPublisher("testTransactions");
-        List<MockPublisher> publishers = singletonList(publisher);
+        List<MockPublisher> publishers = List.of(publisher);
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0)).
@@ -688,7 +753,7 @@ public class MetadataLoaderTest {
             loader.waitForAllEventsToBeHandled();
 
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(500, 100, Arrays.asList(
+                MockBatchReader.newSingleBatchReader(500, 100, List.of(
                     new ApiMessageAndVersion(new BeginTransactionRecord()
                         .setName("testTransactions"), (short) 0),
                     new ApiMessageAndVersion(new TopicRecord()
@@ -701,7 +766,7 @@ public class MetadataLoaderTest {
                 "Topic should not be visible since we started transaction");
 
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(500, 100, Arrays.asList(
+                MockBatchReader.newSingleBatchReader(500, 100, List.of(
                     new ApiMessageAndVersion(new PartitionRecord()
                         .setTopicId(Uuid.fromString("dMCqhcK4T5miGH5wEX7NsQ"))
                         .setPartitionId(0), (short) 0),
@@ -715,7 +780,7 @@ public class MetadataLoaderTest {
 
             if (abortTxn) {
                 loader.handleCommit(
-                    MockBatchReader.newSingleBatchReader(500, 100, singletonList(
+                    MockBatchReader.newSingleBatchReader(500, 100, List.of(
                         new ApiMessageAndVersion(new AbortTransactionRecord(), (short) 0)
                     )));
                 loader.waitForAllEventsToBeHandled();
@@ -724,7 +789,7 @@ public class MetadataLoaderTest {
                     "Topic should not be visible since the transaction was aborted");
             } else {
                 loader.handleCommit(
-                    MockBatchReader.newSingleBatchReader(500, 100, singletonList(
+                    MockBatchReader.newSingleBatchReader(500, 100, List.of(
                         new ApiMessageAndVersion(new EndTransactionRecord(), (short) 0)
                     )));
                 loader.waitForAllEventsToBeHandled();
@@ -740,7 +805,7 @@ public class MetadataLoaderTest {
     public void testPublishTransactionWithinBatch() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testPublishTransactionWithinBatch");
         MockPublisher publisher = new MockPublisher("testPublishTransactionWithinBatch");
-        List<MockPublisher> publishers = singletonList(publisher);
+        List<MockPublisher> publishers = List.of(publisher);
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0)).
@@ -755,7 +820,7 @@ public class MetadataLoaderTest {
             loader.waitForAllEventsToBeHandled();
 
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(500, 100, Arrays.asList(
+                MockBatchReader.newSingleBatchReader(500, 100, List.of(
                     new ApiMessageAndVersion(new BeginTransactionRecord()
                         .setName("txn-1"), (short) 0),
                     new ApiMessageAndVersion(new TopicRecord()
@@ -777,7 +842,7 @@ public class MetadataLoaderTest {
     public void testSnapshotDuringTransaction() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testSnapshotDuringTransaction");
         MockPublisher publisher = new MockPublisher("testSnapshotDuringTransaction");
-        List<MockPublisher> publishers = singletonList(publisher);
+        List<MockPublisher> publishers = List.of(publisher);
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0)).
@@ -792,7 +857,7 @@ public class MetadataLoaderTest {
             loader.waitForAllEventsToBeHandled();
 
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(500, 100, Arrays.asList(
+                MockBatchReader.newSingleBatchReader(500, 100, List.of(
                     new ApiMessageAndVersion(new BeginTransactionRecord()
                         .setName("txn-1"), (short) 0),
                     new ApiMessageAndVersion(new TopicRecord()
@@ -805,8 +870,8 @@ public class MetadataLoaderTest {
 
             // loading a snapshot discards any in-flight transaction
             loader.handleLoadSnapshot(MockSnapshotReader.fromRecordLists(
-                new MetadataProvenance(600, 101, 4000, true), singletonList(
-                    singletonList(new ApiMessageAndVersion(new TopicRecord().
+                new MetadataProvenance(600, 101, 4000, true), List.of(
+                    List.of(new ApiMessageAndVersion(new TopicRecord().
                         setName("foo").
                         setTopicId(Uuid.fromString("Uum7sfhHQP-obSvfywmNUA")), (short) 0))
                 )));
@@ -841,9 +906,9 @@ public class MetadataLoaderTest {
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(1)).
                 build()) {
-            loader.installPublishers(singletonList(capturingPublisher)).get();
+            loader.installPublishers(List.of(capturingPublisher)).get();
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(0, 1, singletonList(
+                MockBatchReader.newSingleBatchReader(0, 1, List.of(
                     // Any record will work here
                     new ApiMessageAndVersion(new FeatureLevelRecord()
                         .setName(MetadataVersion.FEATURE_NAME)
