@@ -36,12 +36,9 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.nio.ByteBuffer;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
@@ -119,7 +116,7 @@ class BatchAccumulatorTest {
             maxBatchSize
         );
 
-        List<String> records = asList("a", "b", "c", "d", "e", "f", "g", "h", "i");
+        List<String> records = List.of("a", "b", "c", "d", "e", "f", "g", "h", "i");
 
         // Append records
         assertEquals(baseOffset, acc.append(leaderEpoch, records.subList(0, 1), false));
@@ -165,7 +162,7 @@ class BatchAccumulatorTest {
             maxBatchSize
         );
 
-        List<String> records = asList("a", "b", "c", "d", "e", "f", "g", "h", "i");
+        List<String> records = List.of("a", "b", "c", "d", "e", "f", "g", "h", "i");
 
         // Append records
         assertEquals(baseOffset, acc.append(leaderEpoch, records.subList(0, 1), false));
@@ -235,7 +232,7 @@ class BatchAccumulatorTest {
         );
 
         time.sleep(15);
-        assertEquals(baseOffset, acc.append(leaderEpoch, singletonList("a"), false));
+        assertEquals(baseOffset, acc.append(leaderEpoch, List.of("a"), false));
         assertEquals(lingerMs, acc.timeUntilDrain(time.milliseconds()));
         assertFalse(acc.isEmpty());
 
@@ -267,7 +264,7 @@ class BatchAccumulatorTest {
             maxBatchSize
         );
 
-        assertEquals(baseOffset, acc.append(leaderEpoch, singletonList("a"), false));
+        assertEquals(baseOffset, acc.append(leaderEpoch, List.of("a"), false));
         time.sleep(lingerMs);
 
         List<BatchAccumulator.CompletedBatch<String>> batches = acc.drain();
@@ -296,7 +293,7 @@ class BatchAccumulatorTest {
             maxBatchSize
         );
 
-        assertEquals(baseOffset, acc.append(leaderEpoch, singletonList("a"), false));
+        assertEquals(baseOffset, acc.append(leaderEpoch, List.of("a"), false));
         acc.close();
         Mockito.verify(memoryPool).release(buffer);
     }
@@ -318,7 +315,7 @@ class BatchAccumulatorTest {
             maxBatchSize
         );
 
-        List<String> records = asList("a", "b", "c", "d", "e", "f", "g", "h", "i");
+        List<String> records = List.of("a", "b", "c", "d", "e", "f", "g", "h", "i");
         assertEquals(baseOffset, acc.append(leaderEpoch, records.subList(0, 1), false));
         assertEquals(baseOffset + 2, acc.append(leaderEpoch, records.subList(1, 3), false));
         assertEquals(baseOffset + 5, acc.append(leaderEpoch, records.subList(3, 6), false));
@@ -360,7 +357,7 @@ class BatchAccumulatorTest {
 
         // Append enough records so that multiple batches get created
         for (int records = 0; records < numberOfRecords; records++) {
-            acc.append(leaderEpoch, singletonList("foo"), false);
+            acc.append(leaderEpoch, List.of("foo"), false);
         }
 
         List<BatchAccumulator.CompletedBatch<String>> batches = acc.drain();
@@ -413,7 +410,7 @@ class BatchAccumulatorTest {
         // Do the first append outside the thread to start the linger timer
         Mockito.when(memoryPool.tryAllocate(maxBatchSize))
             .thenReturn(ByteBuffer.allocate(maxBatchSize));
-        acc.append(leaderEpoch, singletonList("a"), false);
+        acc.append(leaderEpoch, List.of("a"), false);
 
         // Let the serde block to simulate a slow append
         Mockito.doAnswer(invocation -> {
@@ -428,14 +425,14 @@ class BatchAccumulatorTest {
             Mockito.any(Writable.class)
         );
 
-        Thread appendThread = new Thread(() -> acc.append(leaderEpoch, singletonList("b"), false));
+        Thread appendThread = new Thread(() -> acc.append(leaderEpoch, List.of("b"), false));
         appendThread.start();
 
         // Attempt to drain while the append thread is holding the lock
         acquireLockLatch.await();
         time.sleep(lingerMs);
         assertTrue(acc.needsDrain(time.milliseconds()));
-        assertEquals(Collections.emptyList(), acc.drain());
+        assertEquals(List.of(), acc.drain());
         assertTrue(acc.needsDrain(time.milliseconds()));
 
         // Now let the append thread complete and verify that we can finish the drain
@@ -664,7 +661,7 @@ class BatchAccumulatorTest {
             maxBatchSize
         );
 
-        List<String> records = asList("a", "b", "c", "d", "e", "f", "g");
+        List<String> records = List.of("a", "b", "c", "d", "e", "f", "g");
         assertEquals(baseOffset, acc.append(leaderEpoch, records.subList(0, 1), true));
         acc.forceDrain();
         assertEquals(baseOffset + 2, acc.append(leaderEpoch, records.subList(1, 3), true));
@@ -700,7 +697,7 @@ class BatchAccumulatorTest {
             maxBatchSize
         );
 
-        List<String> records = asList("a", "b", "c", "d", "e", "f", "g");
+        List<String> records = List.of("a", "b", "c", "d", "e", "f", "g");
         assertEquals(baseOffset, acc.append(leaderEpoch, records.subList(0, 1), true));
         acc.forceDrain();
 
@@ -732,7 +729,7 @@ class BatchAccumulatorTest {
             serde
         );
 
-        List<String> records = asList("a", "b", "c", "d", "e", "f", "g");
+        List<String> records = List.of("a", "b", "c", "d", "e", "f", "g");
         assertEquals(baseOffset, acc.append(leaderEpoch, records.subList(0, 1), true));
         acc.forceDrain();
         assertEquals(baseOffset + 2, acc.append(leaderEpoch, records.subList(1, 3), true));
