@@ -22,8 +22,10 @@ import org.apache.kafka.common.message.DescribeLogDirsResponseData;
 import org.apache.kafka.common.network.ClientInformation;
 import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.ApiMessage;
+import org.apache.kafka.common.protocol.ByteBufferAccessor;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.protocol.MessageUtil;
+import org.apache.kafka.common.protocol.Readable;
 import org.apache.kafka.common.requests.AbstractRequest;
 import org.apache.kafka.common.requests.AbstractResponse;
 
@@ -34,9 +36,7 @@ import com.fasterxml.jackson.databind.node.TextNode;
 
 import org.junit.jupiter.api.Test;
 
-import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -60,17 +60,16 @@ public class RequestConvertToJsonTest {
                 } else {
                     message = ApiMessageType.fromApiKey(key.id).newRequest();
                 }
-                ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
+                Readable bytes = MessageUtil.toByteBufferAccessor(message, version);
                 AbstractRequest req = AbstractRequest.parseRequest(key, version, bytes).request;
                 try {
                     RequestConvertToJson.request(req);
                 } catch (IllegalStateException e) {
-                    e.printStackTrace();
                     unhandledKeys.add(key.toString());
                 }
             }
         }
-        assertEquals(Collections.emptyList(), unhandledKeys, "Unhandled request keys");
+        assertEquals(List.of(), unhandledKeys, "Unhandled request keys");
     }
 
     @Test
@@ -88,8 +87,8 @@ public class RequestConvertToJsonTest {
                     message = ApiMessageType.fromApiKey(key.id).newResponse();
                 }
 
-                ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
-                AbstractResponse response = AbstractResponse.parseResponse(key, bytes, version);
+                ByteBufferAccessor readable = MessageUtil.toByteBufferAccessor(message, version);
+                AbstractResponse response = AbstractResponse.parseResponse(key, readable, version);
                 try {
                     RequestConvertToJson.response(response, version);
                 } catch (IllegalStateException e) {
@@ -107,8 +106,8 @@ public class RequestConvertToJsonTest {
             if (key.hasValidVersion()) {
                 short version = key.latestVersion();
                 ApiMessage message = ApiMessageType.fromApiKey(key.id).newResponse();
-                ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
-                AbstractResponse res = AbstractResponse.parseResponse(key, bytes, version);
+                ByteBufferAccessor readable = MessageUtil.toByteBufferAccessor(message, version);
+                AbstractResponse res = AbstractResponse.parseResponse(key, readable, version);
                 try {
                     RequestConvertToJson.response(res, version);
                 } catch (IllegalStateException e) {
@@ -116,7 +115,7 @@ public class RequestConvertToJsonTest {
                 }
             }
         }
-        assertEquals(Collections.emptyList(), unhandledKeys, "Unhandled response keys");
+        assertEquals(List.of(), unhandledKeys, "Unhandled response keys");
     }
 
     @Test
