@@ -16,7 +16,6 @@
  */
 package org.apache.kafka.tiered.storage;
 
-import kafka.log.UnifiedLog;
 import kafka.utils.TestUtils;
 
 import org.apache.kafka.clients.CommonClientConfigs;
@@ -45,6 +44,7 @@ import org.apache.kafka.server.log.remote.storage.LocalTieredStorage;
 import org.apache.kafka.server.log.remote.storage.LocalTieredStorageHistory;
 import org.apache.kafka.server.log.remote.storage.LocalTieredStorageSnapshot;
 import org.apache.kafka.storage.internals.epoch.LeaderEpochFileCache;
+import org.apache.kafka.storage.internals.log.UnifiedLog;
 import org.apache.kafka.tiered.storage.specs.ExpandPartitionCountSpec;
 import org.apache.kafka.tiered.storage.specs.TopicSpec;
 import org.apache.kafka.tiered.storage.utils.BrokerLocalStorage;
@@ -54,7 +54,6 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -94,7 +93,7 @@ public final class TieredStorageTestContext implements AutoCloseable {
     }
 
     private void initClients() {
-        // rediscover the new bootstrap-server port incase of broker restarts
+        // rediscover the new bootstrap-server port in case of broker restarts
         ListenerName listenerName = harness.listenerName();
         Properties commonOverrideProps = new Properties();
         commonOverrideProps.put(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, harness.bootstrapServers(listenerName));
@@ -107,7 +106,7 @@ public final class TieredStorageTestContext implements AutoCloseable {
 
         producer = harness.createProducer(ser, ser, producerOverrideProps);
         consumer = harness.createConsumer(de, de, commonOverrideProps,
-                CollectionConverters.asScala(Collections.<String>emptyList()).toList());
+                CollectionConverters.asScala(List.<String>of()).toList());
         admin = harness.createAdminClient(listenerName, commonOverrideProps);
     }
 
@@ -118,35 +117,35 @@ public final class TieredStorageTestContext implements AutoCloseable {
 
     public void createTopic(TopicSpec spec) throws ExecutionException, InterruptedException {
         NewTopic newTopic;
-        if (spec.getAssignment() == null || spec.getAssignment().isEmpty()) {
-            newTopic = new NewTopic(spec.getTopicName(), spec.getPartitionCount(), (short) spec.getReplicationFactor());
+        if (spec.assignment() == null || spec.assignment().isEmpty()) {
+            newTopic = new NewTopic(spec.topicName(), spec.partitionCount(), (short) spec.replicationFactor());
         } else {
-            Map<Integer, List<Integer>> replicasAssignments = spec.getAssignment();
-            newTopic = new NewTopic(spec.getTopicName(), replicasAssignments);
+            Map<Integer, List<Integer>> replicasAssignments = spec.assignment();
+            newTopic = new NewTopic(spec.topicName(), replicasAssignments);
         }
-        newTopic.configs(spec.getProperties());
-        admin.createTopics(Collections.singletonList(newTopic)).all().get();
-        TestUtils.waitForAllPartitionsMetadata(harness.brokers(), spec.getTopicName(), spec.getPartitionCount());
+        newTopic.configs(spec.properties());
+        admin.createTopics(List.of(newTopic)).all().get();
+        TestUtils.waitForAllPartitionsMetadata(harness.brokers(), spec.topicName(), spec.partitionCount());
         synchronized (this) {
-            topicSpecs.put(spec.getTopicName(), spec);
+            topicSpecs.put(spec.topicName(), spec);
         }
     }
 
     public void createPartitions(ExpandPartitionCountSpec spec) throws ExecutionException, InterruptedException {
         NewPartitions newPartitions;
-        if (spec.getAssignment() == null || spec.getAssignment().isEmpty()) {
-            newPartitions = NewPartitions.increaseTo(spec.getPartitionCount());
+        if (spec.assignment() == null || spec.assignment().isEmpty()) {
+            newPartitions = NewPartitions.increaseTo(spec.partitionCount());
         } else {
-            Map<Integer, List<Integer>> assignment = spec.getAssignment();
+            Map<Integer, List<Integer>> assignment = spec.assignment();
             List<List<Integer>> newAssignments = assignment.entrySet().stream()
                     .sorted(Map.Entry.comparingByKey())
                     .map(Map.Entry::getValue)
-                    .collect(Collectors.toList());
-            newPartitions = NewPartitions.increaseTo(spec.getPartitionCount(), newAssignments);
+                    .toList();
+            newPartitions = NewPartitions.increaseTo(spec.partitionCount(), newAssignments);
         }
-        Map<String, NewPartitions> partitionsMap = Collections.singletonMap(spec.getTopicName(), newPartitions);
+        Map<String, NewPartitions> partitionsMap = Map.of(spec.topicName(), newPartitions);
         admin.createPartitions(partitionsMap).all().get();
-        TestUtils.waitForAllPartitionsMetadata(harness.brokers(), spec.getTopicName(), spec.getPartitionCount());
+        TestUtils.waitForAllPartitionsMetadata(harness.brokers(), spec.topicName(), spec.partitionCount());
     }
 
     public void updateTopicConfig(String topic,
@@ -176,7 +175,7 @@ public final class TieredStorageTestContext implements AutoCloseable {
                 alterEntries.add(new AlterConfigOp(new ConfigEntry(k, v), AlterConfigOp.OpType.SET)));
         AlterConfigsOptions alterOptions = new AlterConfigsOptions().timeoutMs(30000);
         Map<ConfigResource, Collection<AlterConfigOp>> configsMap =
-                Collections.singletonMap(configResource, alterEntries);
+                Map.of(configResource, alterEntries);
         admin.incrementalAlterConfigs(configsMap, alterOptions).all().get(30, TimeUnit.SECONDS);
     }
 
@@ -205,7 +204,7 @@ public final class TieredStorageTestContext implements AutoCloseable {
     public List<ConsumerRecord<String, String>> consume(TopicPartition topicPartition,
                                                         Integer expectedTotalCount,
                                                         Long fetchOffset) {
-        consumer.assign(Collections.singletonList(topicPartition));
+        consumer.assign(List.of(topicPartition));
         consumer.seek(topicPartition, fetchOffset);
 
         long timeoutMs = 60_000L;
@@ -225,14 +224,14 @@ public final class TieredStorageTestContext implements AutoCloseable {
     }
 
     public Long nextOffset(TopicPartition topicPartition) {
-        List<TopicPartition> partitions = Collections.singletonList(topicPartition);
+        List<TopicPartition> partitions = List.of(topicPartition);
         consumer.assign(partitions);
         consumer.seekToEnd(partitions);
         return consumer.position(topicPartition);
     }
 
     public Long beginOffset(TopicPartition topicPartition) {
-        List<TopicPartition> partitions = Collections.singletonList(topicPartition);
+        List<TopicPartition> partitions = List.of(topicPartition);
         consumer.assign(partitions);
         consumer.seekToBeginning(partitions);
         return consumer.position(topicPartition);
@@ -329,7 +328,7 @@ public final class TieredStorageTestContext implements AutoCloseable {
             throws ExecutionException, InterruptedException {
         String topic = topicPartition.topic();
         int partition = topicPartition.partition();
-        TopicDescription description = admin.describeTopics(Collections.singletonList(topicPartition.topic()))
+        TopicDescription description = admin.describeTopics(List.of(topicPartition.topic()))
                 .allTopicNames().get().get(topic);
         TopicPartitionInfo partitionInfo = description.partitions().get(partition);
         return partitionInfo.replicas().stream().anyMatch(node -> node.id() == replicaId);
