@@ -32,24 +32,40 @@ import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.serialization.ByteArrayDeserializer;
 import org.apache.kafka.common.test.ClusterInstance;
-import org.apache.kafka.common.test.api.ClusterConfig;
-import org.apache.kafka.common.test.api.ClusterTemplate;
+import org.apache.kafka.common.test.api.ClusterConfigProperty;
+import org.apache.kafka.common.test.api.ClusterTest;
+import org.apache.kafka.common.test.api.ClusterTestDefaults;
+import org.apache.kafka.common.test.api.Type;
 import org.apache.kafka.coordinator.group.GroupCoordinatorConfig;
 
 import org.junit.jupiter.api.Assertions;
 
 import java.time.Duration;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 
+import static org.apache.kafka.coordinator.group.GroupCoordinatorConfig.CONSUMER_GROUP_HEARTBEAT_INTERVAL_MS_CONFIG;
+import static org.apache.kafka.coordinator.group.GroupCoordinatorConfig.CONSUMER_GROUP_MIN_HEARTBEAT_INTERVAL_MS_CONFIG;
+import static org.apache.kafka.coordinator.group.GroupCoordinatorConfig.GROUP_INITIAL_REBALANCE_DELAY_MS_CONFIG;
+import static org.apache.kafka.coordinator.group.GroupCoordinatorConfig.OFFSETS_TOPIC_PARTITIONS_CONFIG;
+import static org.apache.kafka.coordinator.group.GroupCoordinatorConfig.OFFSETS_TOPIC_REPLICATION_FACTOR_CONFIG;
 import static org.apache.kafka.test.TestUtils.DEFAULT_MAX_WAIT_MS;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
+@ClusterTestDefaults(
+    types = {Type.CO_KRAFT},
+    serverProperties = {
+        @ClusterConfigProperty(key = OFFSETS_TOPIC_PARTITIONS_CONFIG, value = "1"),
+        @ClusterConfigProperty(key = OFFSETS_TOPIC_REPLICATION_FACTOR_CONFIG, value = "1"),
+        @ClusterConfigProperty(key = GROUP_INITIAL_REBALANCE_DELAY_MS_CONFIG, value = "1000"),
+        @ClusterConfigProperty(key = CONSUMER_GROUP_HEARTBEAT_INTERVAL_MS_CONFIG, value = "500"),
+        @ClusterConfigProperty(key = CONSUMER_GROUP_MIN_HEARTBEAT_INTERVAL_MS_CONFIG, value = "500"),
+    }
+)
 public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
     public static final String TOPIC_PREFIX = "foo.";
     public static final String GROUP_PREFIX = "test.group.";
@@ -59,21 +75,17 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
         this.clusterInstance = clusterInstance;
     }
 
-    private static List<ClusterConfig> generator() {
-        return ConsumerGroupCommandTestUtils.generator();
-    }
-
-    @ClusterTemplate("generator")
+    @ClusterTest
     public void testDeleteOffsetsNonExistingGroup() {
         String group = "missing.group";
         String topic = "foo:1";
         try (ConsumerGroupCommand.ConsumerGroupService consumerGroupService = consumerGroupService(getArgs(group, topic))) {
-            Entry<Errors, Map<TopicPartition, Throwable>> res = consumerGroupService.deleteOffsets(group, Collections.singletonList(topic));
+            Entry<Errors, Map<TopicPartition, Throwable>> res = consumerGroupService.deleteOffsets(group, List.of(topic));
             assertEquals(Errors.GROUP_ID_NOT_FOUND, res.getKey());
         }
     }
 
-    @ClusterTemplate("generator")
+    @ClusterTest
     public void testDeleteOffsetsOfStableConsumerGroupWithTopicPartition() {
         for (GroupProtocol groupProtocol : clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
@@ -85,7 +97,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
         }
     }
 
-    @ClusterTemplate("generator")
+    @ClusterTest
     public void testDeleteOffsetsOfStableConsumerGroupWithTopicOnly() {
         for (GroupProtocol groupProtocol : clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
@@ -97,7 +109,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
         }
     }
 
-    @ClusterTemplate("generator")
+    @ClusterTest
     public void testDeleteOffsetsOfStableConsumerGroupWithUnknownTopicPartition() {
         for (GroupProtocol groupProtocol : clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
@@ -107,7 +119,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
         }
     }
 
-    @ClusterTemplate("generator")
+    @ClusterTest
     public void testDeleteOffsetsOfStableConsumerGroupWithUnknownTopicOnly() {
         for (GroupProtocol groupProtocol : clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
@@ -117,7 +129,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
         }
     }
 
-    @ClusterTemplate("generator")
+    @ClusterTest
     public void testDeleteOffsetsOfEmptyConsumerGroupWithTopicPartition() {
         for (GroupProtocol groupProtocol : clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
@@ -129,7 +141,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
         }
     }
 
-    @ClusterTemplate("generator")
+    @ClusterTest
     public void testDeleteOffsetsOfEmptyConsumerGroupWithTopicOnly() {
         for (GroupProtocol groupProtocol : clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
@@ -141,7 +153,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
         }
     }
 
-    @ClusterTemplate("generator")
+    @ClusterTest
     public void testDeleteOffsetsOfEmptyConsumerGroupWithUnknownTopicPartition() {
         for (GroupProtocol groupProtocol : clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
@@ -151,7 +163,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
         }
     }
 
-    @ClusterTemplate("generator")
+    @ClusterTest
     public void testDeleteOffsetsOfEmptyConsumerGroupWithUnknownTopicOnly() {
         for (GroupProtocol groupProtocol : clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
@@ -173,7 +185,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
     private static ConsumerGroupCommand.ConsumerGroupService consumerGroupService(String[] args) {
         return new ConsumerGroupCommand.ConsumerGroupService(
             ConsumerGroupCommandOptions.fromArgs(args),
-            Collections.singletonMap(AdminClientConfig.RETRIES_CONFIG, Integer.toString(Integer.MAX_VALUE))
+            Map.of(AdminClientConfig.RETRIES_CONFIG, Integer.toString(Integer.MAX_VALUE))
         );
     }
 
@@ -185,7 +197,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
         return () -> {
             String topic = inputPartition >= 0 ? inputTopic + ":" + inputPartition : inputTopic;
             try (ConsumerGroupCommand.ConsumerGroupService consumerGroupService = consumerGroupService(getArgs(inputGroup, topic))) {
-                Entry<Errors, Map<TopicPartition, Throwable>> res = consumerGroupService.deleteOffsets(inputGroup, Collections.singletonList(topic));
+                Entry<Errors, Map<TopicPartition, Throwable>> res = consumerGroupService.deleteOffsets(inputGroup, List.of(topic));
                 Errors topLevelError = res.getKey();
                 Map<TopicPartition, Throwable> partitions = res.getValue();
                 TopicPartition tp = new TopicPartition(inputTopic, expectedPartition);
@@ -207,7 +219,7 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
                                        Runnable validateRunnable) {
         produceRecord(inputTopic);
         try (Consumer<byte[], byte[]> consumer = createConsumer(inputGroup, groupProtocol)) {
-            consumer.subscribe(Collections.singletonList(inputTopic));
+            consumer.subscribe(List.of(inputTopic));
             ConsumerRecords<byte[], byte[]> records = consumer.poll(Duration.ofMillis(DEFAULT_MAX_WAIT_MS));
             Assertions.assertNotEquals(0, records.count());
             consumer.commitSync();
@@ -248,14 +260,14 @@ public class DeleteOffsetsConsumerGroupCommandIntegrationTest {
     }
 
     private void createTopic(String topic) {
-        try (Admin admin = Admin.create(Collections.singletonMap(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
-            Assertions.assertDoesNotThrow(() -> admin.createTopics(Collections.singletonList(new NewTopic(topic, 1, (short) 1))).topicId(topic).get());
+        try (Admin admin = Admin.create(Map.of(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
+            Assertions.assertDoesNotThrow(() -> admin.createTopics(List.of(new NewTopic(topic, 1, (short) 1))).topicId(topic).get());
         }
     }
 
     private void removeTopic(String topic) {
-        try (Admin admin = Admin.create(Collections.singletonMap(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
-            Assertions.assertDoesNotThrow(() -> admin.deleteTopics(Collections.singletonList(topic)).all());
+        try (Admin admin = Admin.create(Map.of(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
+            Assertions.assertDoesNotThrow(() -> admin.deleteTopics(List.of(topic)).all());
         }
     }
 }
